fix(project): поменял логику для работы с tgname на uuid, так как у детей username может и не быть
